Lib enhancements + Prop copy change + Store lov persistence (untested)